Menu jump fix, menu unselectable.

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -35,6 +35,15 @@
   transition: @trans;
 }
 
+.unselectable{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 body {
   background: url("../img/water.png") repeat;
   padding: 0;
@@ -55,6 +64,7 @@ body {
 }
 
 .menu {
+  .unselectable;
   top: 0;
   width: 100%;
   height: 40px;
@@ -92,6 +102,8 @@ body {
     outline: none;
     &:hover{
       background-color: rgba(0, 0, 0, 0.5);
+      //For data-target fix
+      cursor: pointer;
     }
   }
 }
